cynic-querygen/tests/snapshots/misc_tests__keyword_arguments.snap
---
source: cynic-querygen/tests/misc-tests.rs
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[derive(cynic::QueryVariables, Debug)]
pub struct MyQueryVariables {
    #[cynic(rename = "type")]
    pub type_: Uuid,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Foo", variables = "MyQueryVariables")]
pub struct MyQuery {
    #[arguments(id: $type_)]
    pub bar: Option<Bar>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Bar {
    pub id: Uuid,
    pub name: Option<String>,
}

#[derive(cynic::Scalar, Debug, Clone)]
#[cynic(graphql_type = "UUID")]
pub struct Uuid(pub String);


