cynic-querygen/tests/snapshots/misc_tests__keyword_renames.snap
---
source: cynic-querygen/tests/misc-tests.rs
assertion_line: 32
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::schema_for_derives(
    file = r#"schema.graphql"#,
    module = "schema",
)]
mod queries {
    use super::schema;

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Foo")]
    pub struct KeywordRenames {
        #[cynic(rename = "_")]
        pub __underscore: Option<bool>,
        #[cynic(rename = "self")]
        pub self_: Option<bool>,
        #[cynic(rename = "super")]
        pub super_: Option<bool>,
        #[cynic(rename = "crate")]
        pub crate_: Option<bool>,
        #[cynic(rename = "async")]
        pub async_: Option<bool>,
    }

}

mod schema {
    cynic::use_schema!(r#"schema.graphql"#);
}


