cynic-querygen/tests/snapshots/misc_tests__recursive_inputs.snap
---
source: cynic-querygen/tests/misc-tests.rs
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryVariables, Debug)]
pub struct MyQueryVariables {
    pub input: SelfRecursiveInput,
    pub input2: RecursiveInputParent,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Foo", variables = "MyQueryVariables")]
pub struct MyQuery {
    #[arguments(recursive: $input, recursive2: $input2)]
    pub recursive_input_field: Option<bool>,
}

#[derive(cynic::InputObject, Debug)]
pub struct RecursiveInputParent {
    pub recurse: Option<RecursiveInputChild>,
}

#[derive(cynic::InputObject, Debug)]
pub struct RecursiveInputChild {
    pub recurse: Option<Box<RecursiveInputParent>>,
}

#[derive(cynic::InputObject, Debug)]
pub struct SelfRecursiveInput {
    pub recurse: Option<Box<SelfRecursiveInput>>,
}
