cynic-querygen/tests/snapshots/misc_tests__scalar_casing.snap
---
source: cynic-querygen/tests/misc-tests.rs
assertion_line: 43
expression: "document_to_fragment_structs(query, schema,\n        &QueryGenOptions::default()).expect(\"QueryGen Failed\")"
---
#[cynic::schema_for_derives(
    file = r#"schema.graphql"#,
    module = "schema",
)]
mod queries {
    use super::schema;

    #[derive(cynic::QueryVariables, Debug)]
    pub struct MyQueryVariables {
        pub id: Uuid,
    }

    #[derive(cynic::QueryFragment, Debug)]
    #[cynic(graphql_type = "Foo", variables = "MyQueryVariables")]
    pub struct MyQuery {
        #[arguments(id: $id)]
        pub bar: Option<Bar>,
    }

    #[derive(cynic::QueryFragment, Debug)]
    pub struct Bar {
        pub id: Uuid,
        pub name: Option<String>,
    }

    #[derive(cynic::Scalar, Debug, Clone)]
    #[cynic(graphql_type = "UUID")]
    pub struct Uuid(pub String);

}

mod schema {
    cynic::use_schema!(r#"schema.graphql"#);
}


